Cannot disable warnings with CSharp / VS generator.
There appears to be no way to disable warnings. E.g. I expect that something like:
target_compile_options(${TARGET_NAME} PRIVATE "/nowarn:101,303" )
-or-
set(CMAKE_CSharp_FLAGS "${CMAKE_CSharp_FLAGS} /nowarn:101,303")
-or-
set(CMAKE_CSharp_FLAGS_DEBUG "${CMAKE_CSharp_FLAGS_DEBUG} /nowarn:101,303")
will result in a C# command line including "/nowarn:101,303". (Even better would be if the VS IDE showed those warning disabled.)
But CMake puts this information into the node, where VS appears to ignore it.
NOTE: There are other settings as well that seem to be in a similar predicament, e.g. 'Platform' defaults to x86, and I can't get it set to 'AnyCPU' (or any other value) as it is handled similarly.
It looks like the cmIDEOptions table for VS12_CSharp and cmIDEOptions code needs an update.