VS: Fix nowarn compiler option to accept warning numbers.

Warning disables are transferred to the VS IDE `<NoWarn>` node.

Fixes: #18878